# minimal-phat-contract

./: Cargo.toml  README.md  rust-toolchain.toml
src/: lib.rs
