[package]
name = "minimal-phat-contract"
version = "0.0.1"
authors = ["leechael@phala.network"]
edition = "2021"
rust-version = "1.73.0"

[dependencies]
ink = { version = "4.2.0", default-features = false }
ink_storage = { version = "4", default-features = false }
pink = { version = "0.4", default-features = false }
this-crate = "0.1.0"

scale = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
pink-chain-extension = "0.1"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink/std",
]
ink-as-dependency = []
